[project]
name = "house-bot"
version = "0.1.0"
description = "Discord bot to help manage house management data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "apscheduler==3.11.0",
  "discord.py==2.5.2",
  "gspread==6.2.0",
  "oauth2client==4.1.3",
  "openai==1.68.2",
  "python-dotenv==1.1.0",
]

[tool.uv]
package = false
